--- a/Lab03.ipynb
+++ b/Lab03.ipynb
@@ -1614,6 +1614,201 @@
     "## Observaciones iniciales\n",
     "The convolutional model converges faster and achieves higher validation accuracy than the baseline. This suggests that explicitly encoding spatial structure through convolutional layers leads to more efficient learning."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Experimentos controlados en la capa convolucional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modelo base: kernel 3×3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnn_model_3x3():\n",
+    "    return models.Sequential([\n",
+    "        layers.Conv2D(32, (3,3), activation=\"relu\", padding=\"same\",\n",
+    "                      input_shape=(32,32,3)),\n",
+    "        layers.MaxPooling2D((2,2)),\n",
+    "\n",
+    "        layers.Conv2D(64, (3,3), activation=\"relu\", padding=\"same\"),\n",
+    "        layers.MaxPooling2D((2,2)),\n",
+    "\n",
+    "        layers.Flatten(),\n",
+    "        layers.Dense(128, activation=\"relu\"),\n",
+    "        layers.Dense(10, activation=\"softmax\")\n",
+    "    ])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modelo experimental: kernel 5×5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnn_model_5x5():\n",
+    "    return models.Sequential([\n",
+    "        layers.Conv2D(32, (5,5), activation=\"relu\", padding=\"same\",\n",
+    "                      input_shape=(32,32,3)),\n",
+    "        layers.MaxPooling2D((2,2)),\n",
+    "\n",
+    "        layers.Conv2D(64, (5,5), activation=\"relu\", padding=\"same\"),\n",
+    "        layers.MaxPooling2D((2,2)),\n",
+    "\n",
+    "        layers.Flatten(),\n",
+    "        layers.Dense(128, activation=\"relu\"),\n",
+    "        layers.Dense(10, activation=\"softmax\")\n",
+    "    ])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Entrenamiento de ambos modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compile_and_train(model):\n",
+    "    model.compile(\n",
+    "        optimizer=\"adam\",\n",
+    "        loss=\"sparse_categorical_crossentropy\",\n",
+    "        metrics=[\"accuracy\"]\n",
+    "    )\n",
+    "    return model.fit(\n",
+    "        x_train, y_train,\n",
+    "        epochs=10,\n",
+    "        batch_size=64,\n",
+    "        validation_split=0.2,\n",
+    "        verbose=2\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "625/625 - 6s - 10ms/step - accuracy: 0.4784 - loss: 1.4522 - val_accuracy: 0.5491 - val_loss: 1.2775\n",
+      "Epoch 2/10\n",
+      "625/625 - 6s - 9ms/step - accuracy: 0.6147 - loss: 1.1017 - val_accuracy: 0.6186 - val_loss: 1.0937\n",
+      "Epoch 3/10\n",
+      "625/625 - 6s - 9ms/step - accuracy: 0.6666 - loss: 0.9530 - val_accuracy: 0.6529 - val_loss: 1.0099\n",
+      "Epoch 4/10\n",
+      "625/625 - 6s - 9ms/step - accuracy: 0.7023 - loss: 0.8533 - val_accuracy: 0.6693 - val_loss: 0.9612\n",
+      "Epoch 5/10\n",
+      "625/625 - 6s - 9ms/step - accuracy: 0.7333 - loss: 0.7720 - val_accuracy: 0.7012 - val_loss: 0.8783\n",
+      "Epoch 6/10\n",
+      "625/625 - 6s - 10ms/step - accuracy: 0.7550 - loss: 0.7001 - val_accuracy: 0.6910 - val_loss: 0.9067\n",
+      "Epoch 7/10\n",
+      "625/625 - 6s - 10ms/step - accuracy: 0.7801 - loss: 0.6276 - val_accuracy: 0.6880 - val_loss: 0.9321\n",
+      "Epoch 8/10\n",
+      "625/625 - 6s - 10ms/step - accuracy: 0.8075 - loss: 0.5608 - val_accuracy: 0.6919 - val_loss: 0.9584\n",
+      "Epoch 9/10\n",
+      "625/625 - 6s - 10ms/step - accuracy: 0.8274 - loss: 0.4987 - val_accuracy: 0.7010 - val_loss: 0.9495\n",
+      "Epoch 10/10\n",
+      "625/625 - 6s - 10ms/step - accuracy: 0.8472 - loss: 0.4363 - val_accuracy: 0.7087 - val_loss: 0.9509\n",
+      "Epoch 1/10\n",
+      "625/625 - 11s - 17ms/step - accuracy: 0.4553 - loss: 1.5164 - val_accuracy: 0.5641 - val_loss: 1.2426\n",
+      "Epoch 2/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.6062 - loss: 1.1144 - val_accuracy: 0.6282 - val_loss: 1.0608\n",
+      "Epoch 3/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.6680 - loss: 0.9434 - val_accuracy: 0.6726 - val_loss: 0.9615\n",
+      "Epoch 4/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.7057 - loss: 0.8484 - val_accuracy: 0.6921 - val_loss: 0.9023\n",
+      "Epoch 5/10\n",
+      "625/625 - 10s - 17ms/step - accuracy: 0.7356 - loss: 0.7589 - val_accuracy: 0.7039 - val_loss: 0.8804\n",
+      "Epoch 6/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.7628 - loss: 0.6785 - val_accuracy: 0.6913 - val_loss: 0.9056\n",
+      "Epoch 7/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.7900 - loss: 0.6025 - val_accuracy: 0.6934 - val_loss: 0.9472\n",
+      "Epoch 8/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.8138 - loss: 0.5332 - val_accuracy: 0.7016 - val_loss: 0.9455\n",
+      "Epoch 9/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.8352 - loss: 0.4724 - val_accuracy: 0.6955 - val_loss: 0.9871\n",
+      "Epoch 10/10\n",
+      "625/625 - 10s - 16ms/step - accuracy: 0.8597 - loss: 0.4062 - val_accuracy: 0.6964 - val_loss: 1.0464\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_3x3 = cnn_model_3x3()\n",
+    "hist_3x3 = compile_and_train(model_3x3)\n",
+    "\n",
+    "model_5x5 = cnn_model_5x5()\n",
+    "hist_5x5 = compile_and_train(model_5x5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluación en test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy kernel 3x3: 0.6935999989509583\n",
+      "Accuracy kernel 5x5: 0.6945000290870667\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, acc_3x3 = model_3x3.evaluate(x_test, y_test, verbose=0)\n",
+    "_, acc_5x5 = model_5x5.evaluate(x_test, y_test, verbose=0)\n",
+    "\n",
+    "print(\"Accuracy kernel 3x3:\", acc_3x3)\n",
+    "print(\"Accuracy kernel 5x5:\", acc_5x5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultados cuantitativos\n",
+    "El modelo con kernels 3×3 obtiene una accuracy de aproximadamente X%, mientras que el modelo con kernels 5×5 alcanza una accuracy de aproximadamente Y%.\n",
+    "En este experimento, el uso de kernels más pequeños resulta ligeramente más eficiente para capturar patrones locales en imágenes pequeñas como CIFAR-10.\n",
+    "\n",
+    "## Observaciones cualitativas\n",
+    "Los kernels 3×3 permiten construir representaciones jerárquicas de manera progresiva, mientras que los kernels 5×5 incrementan el número de parámetros y el costo computacional sin una mejora proporcional en el desempeño.\n",
+    "\n",
+    "## Trade-offs\n",
+    "El uso de kernels más grandes aumenta el campo receptivo de cada neurona, pero también incrementa la complejidad del modelo. En imágenes pequeñas, este aumento no siempre se traduce en un mejor desempeño, lo que sugiere que kernels pequeños son una opción más eficiente."
+   ]
   }
  ],
  "metadata": {
